<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".view.NoteDetailFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="213dp"
        android:layout_height="189dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/selectimage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/url_imageText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:ignore="MissingConstraints"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/detail_title_textView"
        android:layout_width="319dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:hint="@string/note_title"
        android:padding="4dp"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/detail_detail_textView"
        android:layout_width="319dp"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/note_detail"
        android:inputType="textMultiLine"
        android:padding="4dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_title_textView" />


    <Button
        android:id="@+id/save_button"
        android:layout_width="319dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/btn_save"
        android:text="@string/note_save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_detail_textView" />


</androidx.constraintlayout.widget.ConstraintLayout>